done for the day

--- a/HOME.html
+++ b/HOME.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="nav-upper">
-      <pre>C  O  N  N  E  C  T     P  U  B  L  I  C  S</pre>
+      <pre>CONNECT PUBICS</pre>
     </div>
     <header>
       <div id="nav">
@@ -51,62 +51,27 @@
       </div>
     </header>
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In consequatur
-      ducimus, itaque optio laboriosam facere architecto vero eaque delectus
-      error, sequi libero exercitationem, doloribus officiis. Dicta minus
-      cupiditate quos repellat omnis distinctio quidem rem facilis at nam
-      doloremque recusandae consequatur iure blanditiis, laudantium natus nisi
-      quasi? Fugiat reiciendis sit, ab facere excepturi quos soluta tenetur
-      perspiciatis quo hic nemo temporibus, nobis nam ipsum beatae. Dolore neque
-      impedit assumenda similique perferendis accusantium, consequuntur in velit
-      temporibus sequi quia beatae quo eum labore esse cupiditate repudiandae.
-      Similique, fuga numquam! Aspernatur temporibus dicta, iusto illum ad eius
-      vero obcaecati possimus culpa asperiores illo, ipsum sunt dolor rem iste
-      voluptatibus nisi quam magni ipsa quas, vitae eum velit soluta saepe. Amet
-      excepturi, quia eveniet vero, nostrum ex libero nesciunt in est beatae
-      sequi perspiciatis, neque quis? Id voluptatum eius maxime nobis voluptas,
-      quos aut eligendi accusantium. Quis vero sint error soluta, culpa sunt ex
-      expedita? Reprehenderit eum illo ea id totam rem doloremque sint vitae
-      iure architecto, autem exercitationem quisquam sunt debitis aliquid
-      voluptatem quia ipsa officiis! Doloribus quidem nulla ex assumenda sed
-      exercitationem possimus, at dolores autem neque obcaecati optio nemo alias
-      doloremque aspernatur? Beatae neque, animi eius maiores voluptates nemo
-      doloribus quam repellendus accusamus aperiam recusandae impedit? Culpa
-      voluptatem eos error nulla aperiam magnam omnis fuga voluptate nisi hic
-      maiores nihil quas dicta blanditiis ullam optio asperiores dolore
-      voluptatibus iste, cumque qui sapiente. Saepe sapiente error, optio
-      laudantium corrupti at corporis sint sequi nam recusandae sit accusantium,
-      quaerat voluptatem tempora ducimus. Facilis quis tenetur, accusamus
-      laborum quam enim libero, magni placeat rerum vero in delectus repellendus
-      beatae. Eos ratione minus, quia quod ipsa earum aperiam sit. Ratione
-      officia culpa consequuntur et fuga, repellat necessitatibus officiis
-      blanditiis praesentium, ad corporis molestias natus pariatur nam neque
-      aperiam error cum accusantium. Nulla vero a, eveniet quasi quam optio
-      necessitatibus dignissimos voluptas veniam quae corrupti error, neque
-      adipisci minima ea et repellat atque tenetur animi porro sapiente at
-      tempora. Mollitia, consectetur quas inventore incidunt id nam sequi ea in
-      non necessitatibus dicta sint, ipsa expedita adipisci repellendus!
-      Accusamus, fuga optio obcaecati soluta voluptatem reiciendis? Fugiat quos
-      libero architecto maxime voluptatem officia quibusdam ducimus itaque sunt
-      quae, iusto assumenda eligendi aperiam necessitatibus porro nesciunt eos
-      beatae nisi, quis illo illum consequatur ratione at excepturi. Enim sed
-      atque dignissimos necessitatibus sit, dolorum iste quidem cupiditate,
-      nostrum tempore tenetur accusantium molestias optio eos voluptatum?
-      Aliquid, animi soluta. Laudantium temporibus inventore pariatur tempore
-      minima ipsa porro! Quam doloribus quod, impedit similique cupiditate ullam
-      error perspiciatis aperiam. Illum, culpa rem necessitatibus reprehenderit
-      nisi repudiandae facilis sint alias beatae inventore iure distinctio
-      explicabo laborum numquam blanditiis tempore nihil veritatis velit porro
-      accusantium officia autem itaque. Vitae, repellat ad? Placeat eaque
-      aspernatur ducimus enim nesciunt? Eveniet, asperiores error. Non molestiae
-      fuga, quis consequuntur necessitatibus praesentium nulla, minus itaque
-      eveniet error impedit harum mollitia laudantium pariatur tenetur unde enim
-      beatae distinctio tempora inventore esse. Atque enim officiis minus
-      deleniti aperiam incidunt repudiandae eligendi qui doloremque autem quia
-      beatae debitis, culpa assumenda ratione tempora quisquam.
-    </p>
+    <main>
+      <section id="hero_section">
+        <div class="hero_text_container">
+          <h1 class="title">
+            "Turning dreams into <span>iconic brands</span>"
+          </h1>
+          <p class="description">
+            Welcome to <span>CONNECT PUBLICS</span>, where we transform your
+            brand aspirations into reality. With our comprehensive suite of
+            services, we are dedicated to helping you define your brand, find
+            your voice, and connect with your target audience.
+          </p>
+        </div>
+        <div class="hero_img_container">
+          <img src="img/hero section.png" alt="hero image" />
+        </div>
+      </section>
 
-    <section>fedfgfe</section>
+      <div id="sepration"></div>
+
+      
+    </main>
   </body>
 </html>
