--- a/HOME.html
+++ b/HOME.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="nav-upper">
+    <div id="nav-upper">
       <pre>CONNECT PUBICS</pre>
     </div>
     <header>
@@ -63,15 +63,20 @@
             services, we are dedicated to helping you define your brand, find
             your voice, and connect with your target audience.
           </p>
+          <div class="button_area">
+            <a href="#nav-upper"><button class="button"><span>Get Started </span></button></a>
+            <a href="#"><button class="button"><span>Learn More </span></button></a>
+          </div>
         </div>
+
         <div class="hero_img_container">
           <img src="img/hero section.png" alt="hero image" />
         </div>
       </section>
 
-      <div id="sepration"></div>
+      <section id="sepration"></section>
 
-      
+      <section id="Services_section"></section>
     </main>
   </body>
 </html>
