--- a/HOME.html
+++ b/HOME.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="icon" href="img/image.png" />
+    <link rel="icon" href="img/FVICON IMG WHITE.png" />
     <link rel="stylesheet" href="HomeCss.css" />
     <link rel="stylesheet" href="HomeJs.js" />
   </head>
@@ -64,8 +64,12 @@
             your voice, and connect with your target audience.
           </p>
           <div class="button_area">
-            <a href="#nav-upper"><button class="button"><span>Get Started </span></button></a>
-            <a href="#"><button class="button"><span>Learn More </span></button></a>
+            <a href="#nav-upper"
+              ><button class="button"><span>Get Started </span></button></a
+            >
+            <a href="#"
+              ><button class="button"><span>Learn More </span></button></a
+            >
           </div>
         </div>
 
@@ -73,10 +77,126 @@
           <img src="img/hero section.png" alt="hero image" />
         </div>
       </section>
-
+      <!-- /* ------------   sepration section css ------------ */ -->
       <section id="sepration"></section>
 
-      <section id="Services_section"></section>
+      <!-- ------------   Services section section css ------------ -->
+      <section id="Services_section">
+        <div class="Services_text_container">
+          <h2>Our Services</h2>
+          <p>
+            We offer a wide range of services to help you achieve your brand
+          </p>
+        </div>
+        <!-- Public Relations -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img src="img/Public Relations.png" alt="Public Relations" />
+          </div>
+          <div class="Services_card_text">
+            <h3>Public Relations</h3>
+            <p>
+              We craft compelling narratives to build and maintain a positive
+              public image for your brand.
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+        </div>
+        <!-- Influencer Marketing -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Influencer Marketing</h3>
+            <p>
+              Leveraging influential voices to promote your brand and expand
+              your reach
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+          <div class="Services_card_img">
+            <img
+              src="img/influencer marketing.png"
+              alt="Influencer Marketing"
+            />
+          </div>
+        </div>
+        <!-- Social Media Management -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img
+              src="img/Social Media Management.png"
+              alt="Social Media Management"
+            />
+          </div>
+          <div class="Services_card_text">
+            <h3>Social Media Management</h3>
+            <p>
+              Strategically managing your social media presence to engage and
+              grow your audience.
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+        </div>
+        <!-- Product Photography -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Product Photography</h3>
+            <p>
+              High-quality photography to showcase your products in the best
+              light.
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+          <div class="Services_card_img">
+            <img src="img/Product Photography.png" alt="Product Photography" />
+          </div>
+        </div>
+        <!-- Video Shoots -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img src="img/Video Shoots.png" alt="Video Shoots" />
+          </div>
+          <div class="Services_card_text">
+            <h3>Video Shoots</h3>
+            <p>
+              Creating captivating video content to tell your brand's story.
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+        </div>
+        <!-- Press Release Distribution -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Press Release Distribution</h3>
+            <p>
+              Ensuring your news reaches the right audience through targeted
+              distribution.
+            </p>
+            <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a>
+          </div>
+          <div class="Services_card_img">
+            <img
+              src="img/Press Release Distribution.png"
+              alt="Press Release Distribution"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- /* ------------   sepration 2 section css ------------ */ -->
+      <section id="sepration_2"></section>
+      
     </main>
   </body>
 </html>
