--- a/HOME.html
+++ b/HOME.html
@@ -234,7 +234,7 @@
                 placeholder="   Email"
                 required
               /><br />
-              <label>Message*</label><br />
+              <label>Message</label><br />
               <textarea 
               id="Message_box" 
               name="Message" 
@@ -260,7 +260,7 @@
 
     </main>
 
-    <footer>
+    <!-- <footer>
 
 
       <div class="foot-panel1">
@@ -311,6 +311,43 @@
 
       </div>
 
-  </footer>
+  </footer> -->
+    
+    <footer id="footer_section">
+        <div class="footer_items">
+          <div class="footer_box1">
+            <div class="foot_box1_1">
+              <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Consumer Site</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Research</a></li>
+              </ul>
+            </div>
+            <div class="foot_box1_1">
+              <ul>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">Legal</a></li>
+              </ul>
+            </div>
+            <div class="foot_box1_1 social_icons">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+          </div>
+          <div class="footer_box2">
+            <a href="#nav-upper">
+              <img src="img/WHITE CP LOGO.png" alt=""/>
+            </a>
+            <p>Copyright © CONNECT PUBICS. All rights reserved.</p>
+
+            
+          </div>
+        </div>
+    </footer>
+
   </body>
 </html>
