add new web pages

--- a/HOME.html
+++ b/HOME.html
@@ -13,7 +13,7 @@
     />
     <link rel="icon" href="img/FVICON IMG WHITE.png" />
     <link rel="stylesheet" href="HomeCss.css" />
-    <link rel="stylesheet" href="HomeJs.js" />
+    <link rel="stylesheet" href="Js.js" />
   </head>
 
   <body>
@@ -31,10 +31,10 @@
 
         <div class="header__menu navbar" id="data-navbar">
           <ul>
-            <li><a href="#" class="navbar-link">Home</a></li>
-            <li><a href="#" class="navbar-link">About</a></li>
+            <li><a href="HOME.html" class="navbar-link">Home</a></li>
+            <li><a href="About.html" class="navbar-link">About</a></li>
             <li><a href="#" class="navbar-link">Work</a></li>
-            <li><a href="#sepration" class="navbar-link">Services</a></li>
+            <li><a href="Services.html" class="navbar-link">Services</a></li>
             <li><a href="#sepration_2" class="navbar-link">Contact</a></li>
           </ul>
         </div>
@@ -236,12 +236,10 @@
               /><br />
               <label>Message</label><br />
               <textarea 
-              id="Message_box" 
-              name="Message" 
-              rows="4" 
-              cols="60">
+              id="Message_box"
+              name="Message">
               </textarea><br />
-
+              
               <button class="button" type="submit" value="Submit" ><span>Submit  </span></button>
             </form>
           </div>
