service page completed

--- a/HOME.html
+++ b/HOME.html
@@ -65,10 +65,10 @@
             your voice, and connect with your target audience.
           </p>
           <div class="button_area">
-            <a href="#nav-upper"
+            <a href="#sepration_2"
               ><button class="button"><span>Get Started </span></button></a
             >
-            <a href="#"
+            <a href="Services.html"
               ><button class="button"><span>Learn More </span></button></a
             >
           </div>
@@ -87,7 +87,7 @@
         <div class="Services_text_container">
           <h2>Our Services</h2>
           <p>
-            We offer a wide range of services to help you achieve your brand
+            We offer a wide range of services to help you to achieve your brand
           </p>
         </div>
         <!-- Public Relations -->
@@ -101,7 +101,7 @@
               We craft compelling narratives to build and maintain a positive
               public image for your brand.
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
@@ -114,7 +114,7 @@
               Leveraging influential voices to promote your brand and expand
               your reach
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
@@ -139,7 +139,7 @@
               Strategically managing your social media presence to engage and
               grow your audience.
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
@@ -152,7 +152,7 @@
               High-quality photography to showcase your products in the best
               light.
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
@@ -170,7 +170,7 @@
             <p>
               Creating captivating video content to tell your brand's story.
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
@@ -183,7 +183,7 @@
               Ensuring your news reaches the right audience through targeted
               distribution.
             </p>
-            <a href="#">
+            <a href="Services.html">
               <button class="button"><span>Learn More </span></button>
             </a>
           </div>
