--- a/Services.html
+++ b/Services.html
@@ -17,8 +17,6 @@
   </head>
 
   <body>
-
-
     <header>
       <div id="nav">
         <div class="logo">
@@ -33,7 +31,9 @@
             <li><a href="About.html" class="navbar-link">About</a></li>
             <li><a href="#" class="navbar-link">Work</a></li>
             <li><a href="Services.html" class="navbar-link">Services</a></li>
-            <li><a href="HOME.html#sepration_2" class="navbar-link">Contact</a></li>
+            <li>
+              <a href="HOME.html#sepration_2" class="navbar-link">Contact</a>
+            </li>
           </ul>
         </div>
 
@@ -51,155 +51,181 @@
     </header>
 
     <main>
-        <section id="Services_section">
-            <div class="Services_text_container">
-              <h2>Our Services</h2>
-              <p>
-                We offer a wide range of services to help you achieve your brand
-              </p>
-            </div>
-            <!-- Public Relations -->
-            <div class="Services_cards_container">
-              <div class="Services_card_img">
-                <img src="img/Public Relations.png" alt="Public Relations" />
-              </div>
-              <div class="Services_card_text">
-                <h3>Public Relations</h3>
-                <p>
-                  We craft compelling narratives to build and maintain a positive
-                  public image for your brand.
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-            </div>
-            <!-- Influencer Marketing -->
-            <div class="Services_cards_container">
-              <div class="Services_card_text">
-                <h3>Influencer Marketing</h3>
-                <p>
-                  Leveraging influential voices to promote your brand and expand
-                  your reach
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-              <div class="Services_card_img">
-                <img
-                  src="img/influencer marketing.png"
-                  alt="Influencer Marketing"
-                />
-              </div>
-            </div>
-            <!-- Social Media Management -->
-            <div class="Services_cards_container">
-              <div class="Services_card_img">
-                <img
-                  src="img/Social Media Management.png"
-                  alt="Social Media Management"
-                />
-              </div>
-              <div class="Services_card_text">
-                <h3>Social Media Management</h3>
-                <p>
-                  Strategically managing your social media presence to engage and
-                  grow your audience.
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-            </div>
-            <!-- Product Photography -->
-            <div class="Services_cards_container">
-              <div class="Services_card_text">
-                <h3>Product Photography</h3>
-                <p>
-                  High-quality photography to showcase your products in the best
-                  light.
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-              <div class="Services_card_img">
-                <img src="img/Product Photography.png" alt="Product Photography" />
-              </div>
-            </div>
-            <!-- Video Shoots -->
-            <div class="Services_cards_container">
-              <div class="Services_card_img">
-                <img src="img/Video Shoots.png" alt="Video Shoots" />
-              </div>
-              <div class="Services_card_text">
-                <h3>Video Shoots</h3>
-                <p>
-                  Creating captivating video content to tell your brand's story.
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-            </div>
-            <!-- Press Release Distribution -->
-            <div class="Services_cards_container">
-              <div class="Services_card_text">
-                <h3>Press Release Distribution</h3>
-                <p>
-                  Ensuring your news reaches the right audience through targeted
-                  distribution.
-                </p>
-                <a href="#">
-                  <button class="button"><span>Learn More </span></button>
-                </a>
-              </div>
-              <div class="Services_card_img">
-                <img
-                  src="img/Press Release Distribution.png"
-                  alt="Press Release Distribution"
-                />
-              </div>
-            </div>
-          </section>
-    </main>
-    
-    <footer id="footer_section">
-        <div class="footer_items">
-          <div class="footer_box1">
-            <div class="foot_box1_1">
-              <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Consumer Site</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Research</a></li>
-              </ul>
-            </div>
-            <div class="foot_box1_1">
-              <ul>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Legal</a></li>
-              </ul>
-            </div>
-            <div class="foot_box1_1 social_icons">
-              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </div>
+      <section id="Services_section">
+        <div class="Services_text_container">
+          <h2>Our Services</h2>
+          <p>
+            We offer a wide range of services to help you to achieve your brand
+          </p>
+        </div>
+        <!-- Public Relations -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img src="img/Public Relations.png" alt="Public Relations" />
           </div>
-          <div class="footer_box2">
-            <a href="#nav-upper">
-              <img src="img/WHITE CP LOGO.png" alt=""/>
-            </a>
-            <p>Copyright © CONNECT PUBICS. All rights reserved.</p>
-
-            
+          <div class="Services_card_text">
+            <h3>Public Relations</h3>
+            <p>
+              Crafting compelling narratives to build and maintain a positive
+              public image for your brand.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Enhanced brand reputation, increased visibility, and stronger
+              relationships with media.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
           </div>
         </div>
-    </footer>
+        <!-- Influencer Marketing -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Influencer Marketing</h3>
+            <p>
+              Leveraging influential voices to promote your brand and expand
+              your reach.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Increased brand awareness, credibility, and engagement with target
+              audiences.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
+          </div>
+          <div class="Services_card_img">
+            <img
+              src="img/influencer marketing.png"
+              alt="Influencer Marketing"
+            />
+          </div>
+        </div>
+        <!-- Social Media Management -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img
+              src="img/Social Media Management.png"
+              alt="Social Media Management"
+            />
+          </div>
+          <div class="Services_card_text">
+            <h3>Social Media Management</h3>
+            <p>
+              Strategically managing your social media presence to engage and
+              grow your audience.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Strategically managing your social media presence to engage and
+              grow your audience.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
+          </div>
+        </div>
+        <!-- Product Photography -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Product Photography</h3>
+            <p>
+              High-quality photography to showcase your products in the best
+              light.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Professional product images that attract and convert customers.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
+          </div>
+          <div class="Services_card_img">
+            <img src="img/Product Photography.png" alt="Product Photography" />
+          </div>
+        </div>
+        <!-- Video Shoots -->
+        <div class="Services_cards_container">
+          <div class="Services_card_img">
+            <img src="img/Video Shoots.png" alt="Video Shoots" />
+          </div>
+          <div class="Services_card_text">
+            <h3>Video Shoots</h3>
+            <p>
+              Creating captivating video content to tell your brand's story.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Enhanced brand storytelling, higher engagement, and increased
+              conversions.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
+          </div>
+        </div>
+        <!-- Press Release Distribution -->
+        <div class="Services_cards_container">
+          <div class="Services_card_text">
+            <h3>Press Release Distribution</h3>
+            <p>
+              Ensuring your news reaches the right audience through targeted
+              distribution.
+              <br />
+              <br />
+              <b>Benefits: </b><br />
+              Broader reach, increased media coverage, and improved brand
+              visibility.
+            </p>
+            <!-- <a href="#">
+              <button class="button"><span>Learn More </span></button>
+            </a> -->
+          </div>
+          <div class="Services_card_img">
+            <img
+              src="img/Press Release Distribution.png"
+              alt="Press Release Distribution"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
 
+    <footer id="footer_section">
+      <div class="footer_items">
+        <div class="footer_box1">
+          <div class="foot_box1_1">
+            <ul>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Consumer Site</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Research</a></li>
+            </ul>
+          </div>
+          <div class="foot_box1_1">
+            <ul>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Help Center</a></li>
+              <li><a href="#">Legal</a></li>
+            </ul>
+          </div>
+          <div class="foot_box1_1 social_icons">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="footer_box2">
+          <a href="#nav-upper">
+            <img src="img/WHITE CP LOGO.png" alt="" />
+          </a>
+          <p>Copyright © CONNECT PUBICS. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
