--- a/Services.html
+++ b/Services.html
@@ -29,7 +29,7 @@
           <ul>
             <li><a href="HOME.html" class="navbar-link">Home</a></li>
             <li><a href="About.html" class="navbar-link">About</a></li>
-            <li><a href="#" class="navbar-link">Work</a></li>
+            <li><a href="Work.html" class="navbar-link">Work</a></li>
             <li><a href="Services.html" class="navbar-link">Services</a></li>
             <li>
               <a href="HOME.html#sepration_2" class="navbar-link">Contact</a>
@@ -223,7 +223,7 @@
           <a href="#nav-upper">
             <img src="img/WHITE CP LOGO.png" alt="" />
           </a>
-          <p>Copyright © CONNECT PUBICS. All rights reserved.</p>
+          <p>Copyright © CONNECT PUBLICS. All rights reserved.</p>
         </div>
       </div>
     </footer>
