so many changes

--- a/HOME.html
+++ b/HOME.html
@@ -55,11 +55,11 @@
     <main>
       <section id="hero_section">
         <div class="hero_text_container">
-          <h1 class="title">
-            "Turning dreams into <span>iconic brands</span>"
+          <h1 class="title" >
+            Turning dreams into <span id="tagline" >iconic brands</span>
           </h1>
           <p class="description">
-            Welcome to <span>CONNECT PUBLICS</span>, where we transform your
+            <b>Welcome to <span>CONNECT PUBLICS</span></b>, where we transform your
             brand aspirations into reality. With our comprehensive suite of
             services, we are dedicated to helping you define your brand, find
             your voice, and connect with your target audience.
@@ -243,7 +243,7 @@
               name="Message">
               </textarea><br />
               
-              <button class="button" type="submit" value="Submit" ><span>Submit  </span></button>
+              <button class="button" type="submit" value="Submit" ><span>Submit Form </span></button>
               <button class="button" type="reset" value="reset" ><span>Clear  </span></button>
               <div id="result"></div>
             </form>
@@ -351,6 +351,6 @@
           </div>
         </div>
     </footer>
-
+    <script src="Js.js"></script>
   </body>
 </html>
