--- a/HOME.html
+++ b/HOME.html
@@ -243,7 +243,8 @@
               <label>Message</label><br />
               <textarea 
               id="Message_box"
-              name="Message">
+              name="Message"
+              placeholder = "Write your query here...">
               </textarea><br />
               
               <button class="button" type="submit" value="Submit" ><span>Submit Form </span></button>
