--- a/Services.html
+++ b/Services.html
@@ -66,13 +66,12 @@
           <div class="Services_card_text">
             <h3>Public Relations</h3>
             <p>
-              Crafting compelling narratives to build and maintain a positive
-              public image for your brand.
-              <br />
-              <br />
-              <b>Benefits: </b><br />
-              Enhanced brand reputation, increased visibility, and stronger
-              relationships with media.
+              <b>Struggling to get noticed in a noisy world?</b><br />
+              We’re your megaphone! Our PR strategies put your brand in front of
+              the right people — whether it’s crafting stories that grab
+              headlines, building solid media relationships, or win over crises
+              with ease. We make sure you're seen, heard, and remembered for the
+              right reasons.
             </p>
             <!-- <a href="#">
               <button class="button"><span>Learn More </span></button>
@@ -84,13 +83,13 @@
           <div class="Services_card_text">
             <h3>Influencer Marketing</h3>
             <p>
-              Leveraging influential voices to promote your brand and expand
-              your reach.
-              <br />
-              <br />
-              <b>Benefits: </b><br />
-              Increased brand awareness, credibility, and engagement with target
-              audiences.
+              <b
+                >Having trouble reaching your target audience authentically?<br
+              /></b>
+              Let’s connect you with influencers who truly get your brand. We
+              build partnerships that go beyond just likes — real connections
+              that drive engagement, trust, and sales. The right face for the
+              right message.
             </p>
             <!-- <a href="#">
               <button class="button"><span>Learn More </span></button>
@@ -114,13 +113,14 @@
           <div class="Services_card_text">
             <h3>Social Media Management</h3>
             <p>
-              Strategically managing your social media presence to engage and
-              grow your audience.
-              <br />
-              <br />
-              <b>Benefits: </b><br />
-              Strategically managing your social media presence to engage and
-              grow your audience.
+              <b
+                >Low engagement? Tumbleweeds blowing across your social
+                profiles?</b
+              ><br />
+              Let’s breathe life into your social media! From crafting catchy
+              content to building solid strategies, we turn your social profiles
+              into engagement hubs that look aesthetic. Likes, shares, follows —
+              we’re all about turning your audience into loyal fans.
             </p>
             <!-- <a href="#">
               <button class="button"><span>Learn More </span></button>
@@ -132,12 +132,13 @@
           <div class="Services_card_text">
             <h3>Product Photography</h3>
             <p>
-              High-quality photography to showcase your products in the best
-              light.
-              <br />
-              <br />
-              <b>Benefits: </b><br />
-              Professional product images that attract and convert customers.
+              <b>
+                Your product looks great in person, but your photos aren’t doing
+                it justice?</b
+              >
+              <br />Time for a glow-up! Our product photoshoots turn your items
+              into visual masterpieces. From clean and minimal to bold and
+              eye-catching, we make sure your products shine in every shot.
             </p>
             <!-- <a href="#">
               <button class="button"><span>Learn More </span></button>
@@ -172,13 +173,9 @@
           <div class="Services_card_text">
             <h3>Press Release Distribution</h3>
             <p>
-              Ensuring your news reaches the right audience through targeted
-              distribution.
-              <br />
-              <br />
-              <b>Benefits: </b><br />
-              Broader reach, increased media coverage, and improved brand
-              visibility.
+              <b>Want Instant headlines?</b><br />
+              Let's get you placed at the top within a day with a variety of
+              packages depending on your budget.
             </p>
             <!-- <a href="#">
               <button class="button"><span>Learn More </span></button>
